styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

/* colors */
:root {
    /* Variables for storing colors */
    --bg-primary: #111;
    --bg-secondary: #111111fb;   
    --text-color: #fff;
    --heading-color: crimson;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Poppins", sans-serif;
    scroll-behavior: smooth;
}

body {
    background-color: var(--bg-secondary);
    color: var(--text-color);
    min-height: 100%; 
    width: 100%;
    background-image: linear-gradient(to right, rgba(204, 0, 187, 0.15) 0%, rgba(0, 70, 209, 0.15) 100%);   
} 

/* .background-fade {
    
} */


.background-fade img {
    width: 100%;
    height: 100vh;
    z-index: -100;
    position: fixed;
    top: 0;
    left: 0;
    filter: grayscale(1);
    opacity: .08;  
}


/* Hero Section */

header nav {
    height: 15vh;
    width: 70%;
    margin: 0 auto;

    display: flex;
    justify-content: space-between;
    align-items: center;
}

header h1 {
    font-size: 45px;
    color: var(--heading-color);
    font-weight: 800;
    text-transform: uppercase;
    letter-spacing: 5px;
}

header ul {
    display: flex;
    list-style: none;
    gap: 5rem;
}

header a {
    display: block;
    color: var(--text-color);
    text-decoration: none;
    border-radius: .2rem;
    padding: .5rem 1rem;
    transition: .2s ease-in;
    border-bottom: 2px solid var(--heading-color);
    overflow: hidden;
    position: relative;
}

header a::before {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    border-radius: .1rem;
    z-index: -1;
    transition: .2s ease-in;
    transform: translateX(-101%);
    background: var(--heading-color);
}

header a:hover::before {
    transform: translateX(0);
}

header ul li:nth-child(1) a {
    background: var(--heading-color);
    color: var(--text-color);
}

#btn {
    all: unset;
    cursor: pointer;
    transition: .5s ease-out;
    font-size: 30px;
    display: none;
}

#btn:hover {
    transform: rotate(180deg);
    color: var(--heading-color);
}

.s-container {
    min-height: 80vh;
    width: 70%;
    margin: auto;
    display: flex;
    align-items: center;
    gap: 3rem;
}

.icons {
    position: fixed;
    left: 30px;
    top: 50%;
    transform: translateY(-50%);
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
    z-index: 2;
}

.icons .line {
    height: 40px;
    width: 3.5px;
    border-radius: 5rem;
    background: var(--text-color);
}

.icons a {
    font-size: 20px;
    color: #eee;
    background: var(--heading-color);
    text-decoration: none;
    width: 50px;
    height: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    transition: .1s ease-in;
}

.icons a:hover {
    transform: scale(1.4);
}

.header h3 {
    font-size: 25px;
    color: var(--heading-color);
    font-weight: 600;
    text-align: center;
    margin-top: 5rem;
}

.header h1 {
    font-size: 50px;
    position: relative;
    margin-bottom: 5rem;
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 3px;
}

.header h1::after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
    width: 300px;
    height: 5px;
    border-radius: 1rem;
    background: var(--heading-color);

}

.image {
    width: 600px;
    height: 600px;
}

/* img {
    width: 200px;
} */

.image img {
    width: 600px;
    height: 600px;
    border-radius: 50%;
    object-fit: cover;
}

.content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 65%;
}

.title {
    font-size: 5rem;
    font-weight: 400;
    line-height: 5rem;
    margin-bottom: 1rem;
}

.title span {
    font-weight: 700;
}

.subtitle {
    letter-spacing: 2px;
    font-weight: 600;
    margin-bottom: .5rem;
    font-size: 1.5rem;
}

.description {
    font-size: 1.5rem;
    line-height: 2rem;
    margin-bottom: 2rem;
    color: var(--text-color);
    width: 85%;
}

.buttons {
    display: flex;
    gap: 1rem;
}

.buttons a {
    margin-top: 1.5rem;
    font-size: 1rem;
    font-weight: 600;
    letter-spacing: 2px;
    color: black;
    padding: .8rem 1.6rem;
    outline: none;
    border: none;
    border-radius: 10px;
    transition: .3s ease-out;
    cursor: pointer;
    box-shadow: 3px 3px 0 rgba(0, 0, 0, 0.4);
    text-decoration: none;
    background: var(--heading-color);
    color: white;
}

.buttons a:hover {
    transform: scale(1.05);
    color: white;
}

/* Projects section */
.projects-section {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    
}

.projects-section .wrapper {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 6rem;
    max-width: 1000px;
    width: 80%;
    height: 100%;
    margin: 30px auto 0 auto;
}

.project-card {
    background: #0d0d0d;
    border-radius: 1rem;
    /* max-width: 450px; */
    height: 580px;
    width: 100%;
    
}

.project-image-container {
    overflow: hidden;
    width: 100%;
    border-radius: 10px 10px 0 0;
    height: 500px;
    object-fit: cover;
}

.project-image {
    width: 100%;
    object-fit: cover;
    object-position: center;
    height: 100%;
    transition: .2s ease-in-out;
}

.project-image:hover {
    transform: scale(1.05)
}

.project-content {
    border-radius: 0 0 10px 10px;
    padding: 1.5rem 1rem;
    display: flex;
    justify-content: space-between;
    padding-inline: 3rem;

}

.project-content > p {
    color: #fff;
    font-size: 24px;
    font-weight: 400;
    line-height: 30px;
    overflow: hidden;
    white-space: pre-wrap;
}

.check-project {
    display: flex;
    gap: 1rem;
}

.project-desc {
    display: flex;
    align-items: center;
    gap: .5rem;
}

.project-desc i {
    margin-left: 2rem;
}

.check-project a {
    color: var(--text-color);
    font-size: 20px;
    cursor: pointer;
    transition: .2s ease-in-out;
    text-decoration: none;
}

.check-project a:hover {
    color: var(--heading-color);
}

/* Projects section ends */

/* Contact section */

.contact {
    position: relative;
    display: flex;
    font-size: 2em;
    min-height: 100vh;
    padding-block: 2rem;
}

.contact .container {
    width: 70%;
    margin: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.contact .wrapper {
    font-size: 30px;
}

.contact .wrapper .grp {
    display: flex;
    text-align: center;
    justify-content: center;
    align-items: center;
    gap: 1rem;
}

.contact .grp:not(:last-child) {
    margin-bottom: 1.5rem;
}

.contact .grp {
    font-size: 40px;
    margin-right: 1rem;
}


/* Contact section ends */

.back-top {
    text-decoration: none;
    font-size: 20px;
    color: #eee;
    background: var(--heading-color);
    border-radius: 50%;
    width: 3rem;
    height: 3rem;
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
    bottom: 2%;
    right: 2%;
    border: none;
    display: none;
    transition: .4s ease-out;

    cursor: pointer;
}

.back-top:hover {
    transform: translateY(-20px);
}

.back-top:active {
    opacity: 1;
    pointer-events: auto;
}

/* SKILLS */

.skills-section {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.card-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 2rem;
}

.card {
    height: 800px;
    width: 600px;
    border-radius: 10px;
    background: #0000007f;
    backdrop-filter: blur(10px);
    padding: 1rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
    transition: .4s ease-out;
    border: 1px solid var(--heading-color)
}

.card h1 {
    text-align: center;
    font-size: 40px;
    margin-bottom: 2rem;
    color: var(--text-color);
    transition: .4s ease-in-out;
}

.experienced-skills {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    align-items: center;
    justify-content: start;
}

.skill {
    font-size: 20px;
    width: 300px;
    border: 1px solid var(--text-color);
    border-radius: 10px;
    padding: .5rem;
    color: var(--text-color);
    transition: .4s ease-in-out;
    display: flex;
    align-items: center;
    gap: 1rem;
    color: var(--text-color);
}

.skill:hover {
    transform: scale(1.05)
}


/* Responsiveness */

@media only screen and (max-width: 1440px){ 
    .card-wrapper {
        flex-direction: column;
        gap: 1rem;
    }

    .image img {
        width: 500px;
        height: 500px;
    }

    
}

@media only screen and (max-width: 1024px){

    body {
        width: 100vw;
    }

    .s-container, header nav {
        width: 80%;
    }

    .header h3 {
        margin-top: 5rem;
    }
}

@media only screen and (max-width: 950px){


    #btn {
        margin-left: 2rem;
        display: block;
    }

    header ul {
        position: absolute;
        right: 5vh;
        top: 15vh;
        width: 300px;
        min-height: 500px;
        border-top-right-radius: 1rem;
        border-bottom-left-radius: 1rem;
        background: #0000007f;
        backdrop-filter: blur(5px);
        flex-direction: column;
        justify-content: center;
        align-items: center;
        display: none;
    }

    header ul.show {
        display: flex;
    }

    .s-container {
        /* width: 90%; */
        flex-direction: column-reverse;
        gap: 1rem;
        padding-block: 3rem;
        padding-bottom: 2rem;
    }

    .content {
        /* width: 90%; */
        text-align: center;
    }

    .title {
        font-size: 2.5rem;
    }

    .desc {
        width: 100%;
    }

    .buttons {
        margin: 1rem auto;
    }

    .image {
        width: 250px;
        height: 250px;
    }

    .image img {
        width: 100%;
        height: 250px;
    }
}

@media only screen and (max-width: 768px){

    body {
        width: 100%;
    }

    .background-fade img {
        display: none;
    }

    .header h1 {
     font-size: 35px !important;
     margin-top: .7rem;
    }

    .project-desc p {
        display: none;

    }

    .contact .header h3 {
        font-size: 20px;
        margin-bottom: -.5rem;
    }

    .contact .grp i, .contact .grp span {
        font-size: 25px;
    }

    .footer p {
        font-size: 27px !important;
    }

    .footer a {
        font-size: 15px !important;
        padding: -.7rem;
    }
}

@media only screen and (max-width: 524px) {

    body {
        width: 100%;
        margin: 0 auto;
    }

    header ul {
        width: 80%;
        left: 50%;
        transform: translateX(-50%);
    }

    

    .icons {
        display: none;
    }

    .content {
        width: 100%;    
    }

    .title {
        font-size: 2.3rem;
    }

    .description {
        font-size: 15px;
    }

    .contact .grp i {
        margin-right: 0 !important;
    }

    .contact .grp span {
        font-size: 15px;
    }

    .card {
        background: transparent;
        backdrop-filter: blur(0px);
        border: none;
    }

}

@media only screen and (max-width: 375px) {
    body {
        width: 400px;
    }

}

